--- a/wp-content/themes/sixgill/css/custom_build.css
+++ b/wp-content/themes/sixgill/css/custom_build.css
@@ -320,9 +320,8 @@ ul:not([class]) li {
     background-position: 97% 50%, 100% 100%;
     background-size: 20px;
 }
-
 /*
-.form-control {
+.form-control-header {
     display: block;
     width: 100%;
     height: 34px;
@@ -331,11 +330,15 @@ ul:not([class]) li {
     -webkit-box-shadow: none;
     box-shadow: none;
     border: none;
-
 }
- 
 */
 
+.form-search-header {
+    width:322px;  
+    height:40px; 
+    float:right;
+    margin-top:5px;
+}
 
 
 
